# pairnut

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements-build.txt  requirements.txt
.agents/skills/pairnut-release/: SKILL.md
.agents/skills/pairnut-release/agents/: openai.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  packaging_problem.yml
.github/workflows/: build-desktop.yml  ci.yml  codeql.yml  dependency-audit.yml
data/: pairnut.db
pairnut/: __init__.py  app.py
pairnut/database/: __init__.py  connection.py  repositories.py  schema.py
pairnut/domain/: __init__.py  models.py
pairnut/services/: image_features.py  images.py  matching.py  mesh_features.py  model_registry.py  scoring.py  serials.py  updates.py
pairnut/ui/: __init__.py  components.py  views.py
scripts/: build_icons.py
tests/: test_app_smoke.py  test_image_features.py  test_images.py  test_matching.py  test_mesh_features.py  test_model_registry.py  test_schema.py  test_scoring.py  test_updates.py
